show hubble status
Signed-off-by: Paul Chaignon <paul@cilium.io>

--- a/.github/workflows/conformance-aks.yaml
+++ b/.github/workflows/conformance-aks.yaml
@@ -264,6 +264,7 @@ jobs:
           cilium hubble port-forward&
           sleep 10s
           [[ $(pgrep -f "cilium.*hubble.*port-forward|kubectl.*port-forward.*hubble-relay" | wc -l) == 2 ]]
+          kubectl -n kube-system exec ds/cilium -- hubble status
 
       - name: Run connectivity test
         run: |
