--- a/.github/workflows/conformance-aks.yaml
+++ b/.github/workflows/conformance-aks.yaml
@@ -268,7 +268,7 @@ jobs:
 
       - name: Run connectivity test
         run: |
-          cilium connectivity test --force-deploy --flow-validation=disabled --verbose
+          cilium connectivity test --force-deploy --flow-validation=disabled --verbose --debug
 
       - name: Post-test information gathering
         if: ${{ !success() }}
