--- a/.github/workflows/conformance-aks.yaml
+++ b/.github/workflows/conformance-aks.yaml
@@ -172,6 +172,7 @@ jobs:
           mkdir -p $HOME/go/src/github.com/cilium
           git clone --depth 1 -b pr/pchaigno/increase-svc-timeout https://github.com/cilium/cilium-cli $HOME/go/src/github.com/cilium/cilium-cli
           cd $HOME/go/src/github.com/cilium/cilium-cli
+          export GOPATH=$HOME/go
           sudo make install
           cilium version
 
