--- a/.github/workflows/conformance-aks.yaml
+++ b/.github/workflows/conformance-aks.yaml
@@ -169,6 +169,7 @@ jobs:
 
       - name: Install Cilium CLI
         run: |
+          go version
           mkdir -p $HOME/go/src/github.com/cilium
           git clone --depth 1 -b pr/pchaigno/increase-svc-timeout https://github.com/cilium/cilium-cli $HOME/go/src/github.com/cilium/cilium-cli
           cd $HOME/go/src/github.com/cilium/cilium-cli
