--- a/.github/workflows/conformance-aks.yaml
+++ b/.github/workflows/conformance-aks.yaml
@@ -170,10 +170,8 @@ jobs:
       - name: Install Cilium CLI
         run: |
           go version
-          mkdir -p $HOME/go/src/github.com/cilium
-          git clone --depth 1 -b pr/pchaigno/increase-svc-timeout https://github.com/cilium/cilium-cli $HOME/go/src/github.com/cilium/cilium-cli
+          go get github.com/onsi/ginkgo/ginkgo@pr/pchaigno/increase-svc-timeout
           cd $HOME/go/src/github.com/cilium/cilium-cli
-          export GOPATH=$HOME/go
           sudo make install
           cilium version
 
